Added FetchContent for nlohmann&pass-by-reference
nlohamnn added to fetchContent & passing by reference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(VERSION_APP ${search_engine_VERSION_MAJOR}.${search_engine_VERSION_MINOR})
 set(MY_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
-# Указываем путь к библиотеке nlohmann_json
-set(NLOHMANN_JSON_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/nlohmann_json/include)
+# Подключаем nlohmann/json через FetchContent
+include(FetchContent)
+FetchContent_Declare(
+        nlohmann_json
+        URL https://github.com/nlohmann/json/archive/refs/heads/develop.zip
+)
+FetchContent_MakeAvailable(nlohmann_json)
+
+# Переменная для директории с заголовками nlohmann/json
+set(NLOHMANN_JSON_INCLUDE_DIR ${nlohmann_json_SOURCE_DIR})
 
 # Подключаем исходники и тесты
 add_subdirectory(src)
