--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,41 @@
 cmake_minimum_required(VERSION 3.24)
-project(search_engine VERSION 0.1)
+project(search_engine_tests)
 
 set(CMAKE_CXX_STANDARD 17)
-set(VERSION_APP ${search_engine_VERSION_MAJOR}.${search_engine_VERSION_MINOR})
-set(MY_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
-# Подключаем nlohmann/json через FetchContent
+# Подключаем GoogleTest
 include(FetchContent)
 FetchContent_Declare(
-        nlohmann_json
-        URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.2.zip
+        googletest
+        URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
 )
-FetchContent_MakeAvailable(nlohmann_json)
-include_directories(${nlohmann_json_SOURCE_DIR})
 
-# Переменная для директории с заголовками nlohmann/json
-set(NLOHMANN_JSON_INCLUDE_DIR ${nlohmann_json_SOURCE_DIR})
+set(gtest_disable_pthreads ON CACHE BOOL "" FORCE)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
-# Подключаем исходники и тесты
-add_subdirectory(src)
-add_subdirectory(tst)
+enable_testing()
+
+# Создаём исполняемый файл для тестов
+add_executable(
+        hello_test
+        hello_test.cc
+        ${CMAKE_SOURCE_DIR}/src/InvertedIndex.cpp
+        ${CMAKE_SOURCE_DIR}/src/SearchServer.cpp
+)
+
+# Подключаем директории с заголовками
+target_include_directories(hello_test PRIVATE
+        ${MY_INCLUDE_DIR}
+        ${NLOHMANN_JSON_INCLUDE_DIR}
+        )
+
+# Подключаем библиотеки
+target_link_libraries(hello_test PRIVATE
+        nlohmann_json::nlohmann_json
+        GTest::gtest_main
+        )
+
+# Автоматическое обнаружение тестов
+include(GoogleTest)
+gtest_discover_tests(hello_test)
